# genTree

./: .gitignore  config.toml  dnscrypt.toml  nginx.toml  pyproject.toml  readme.md  tor.toml
branches/: base.toml  glibc.toml  nginx.toml  tini.toml
config/: base.toml  base_tini.toml  glibc.toml  nginx.toml  tini.toml
config/default/: make.conf
config_roots/default/etc/portage/: make.conf  make.profile
ebuild/: genTree-0.1.0.ebuild  genTree-9999.ebuild
src/genTree/: __init__.py  build_cleaner.py  default.toml  genTree.py  genTreeConfig.py  genTreeTarFilter.py  gen_tree_config.py  gen_tree_filters.py  gen_tree_tar_filter.py  main.py  mount_mixins.py  oci_mixins.py  package_server.py  portage_types.py  use_flags.py  whiteoutFilter.py  whiteout_filter.py
src/genTree/config/: base.toml  ca-certificates.toml  coreutils.toml  gcc.toml  glibc-stripped.toml  glibc.toml  openssl.toml  tini.toml
src/genTree/filters/: __init__.py  build_cleaner.py  filters.py  tar_filter.py  whiteout.py
src/genTree/types/: __init__.py  mount_mixins.py  oci_mixins.py  portage_types.py
