[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genTree"
version = "0.1.0"
authors = [
  { name="Desultory", email="dev@pyl.onl" },
]
description = "Generates filesystem trees using portage."
readme = "readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

dependencies = [
    "zenlib >= 3.1.6",
    "aiohttp >= 3.10.0",
]

[project.scripts]
genTree = "genTree.main:main"
genTree-exec = "genTree.main:execute"
genTree-import-seed = "genTree.main:import_seed"
genTree-update-seed = "genTree.main:update_seed"
genTree-init-crossdev = "genTree.main:init_crossdev"
genTree-clean-builds = "genTree.main:clean_builds"
genTree-server = "genTree.package_server:main"

[project.urls]
Homepage = "https://github.com/desultory/genTree"
Issues = "https://github.com/desultory/genTree/issues"
